<resources>
    <string name="app_name">ToDo Extensions</string>
    <string name="action_settings">Settings</string>
    <string name="new_todo_item">New Todo item</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="deadline">Deadline</string>
    <string name="done">Done</string>
    <string name="place">Place</string>
    <string name="action_edit">Edit</string>
    <string name="edit_todo_item">Edit Todo Item</string>
    <string name="not_done">Not Done</string>
    <string name="action_drag">Dragging</string>
    <string name="action_delete">Delete all</string>
    <string name="action_alarm">Alarm</string>
    <string name="action_dragging">Dragging</string>
    <string name="repeat">Repeat</string>
    <string name="no_repeat">No Repeat</string>
    <string name="add_image">Add Image</string>
    <string name="delete_image">Delete Image</string>
</resources>
